# campus-ai-hub

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.web  README.md  guide  index.html  setup  tailwind.config.ts
apps/api/: README.md  server.js
apps/api-rust/: Cargo.toml  README.md
apps/api-rust/src/: cache.rs  config.rs  main.rs  models.rs  providers.rs  routes.rs  state.rs
docs/: FINAL_RUNBOOK.html  FINAL_RUNBOOK.md
infra/: docker-compose.local.yml  docker-compose.runtime.yml  nginx.conf
runtimes/local-model/: README.md
scripts/: guide.sh  setup.sh
src/: App.tsx  index.css
src/components/: AppHeader.tsx  AppLayout.tsx  AppSidebar.tsx  CursorAura.tsx  StateIndicators.tsx  UiConfigProvider.tsx
src/hooks/: use-theme.ts
src/lib/: api.ts  provider-config.ts  ui-config.ts
src/pages/: AppearanceStudio.tsx  Index.tsx  ResponsibleAI.tsx  RuntimeSettings.tsx  UtilityBuilder.tsx  Workspace.tsx
